kubernetes/todo-app/todo-app.service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 3000 
      targetPort: 3000
  type: NodePort
